Rewrite: lexer is ready

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ FetchContent_MakeAvailable(interface99)
 add_executable(${PROJECT_NAME}
     src/main.c
     src/args.c
+    src/common.c
+    src/lexer.c
 )
 target_compile_definitions(${PROJECT_NAME} PRIVATE VERSION="${CMAKE_PROJECT_VERSION}")
 target_link_libraries(${PROJECT_NAME} interface99 datatype99)
