Rewrite: codegen done

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,6 +40,8 @@ add_executable(${PROJECT_NAME}
     src/common.c
     src/lexer.c
     src/ast.c
+    src/syscalls.c
+    src/codegen.c
 )
 target_compile_definitions(${PROJECT_NAME} PRIVATE VERSION="${CMAKE_PROJECT_VERSION}")
 target_link_libraries(${PROJECT_NAME} interface99 datatype99)
